Data Types and Missing Data

--- a/kaggleLearn/pandas.ipynb
+++ b/kaggleLearn/pandas.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating, Reading and Writing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -364,6 +371,13 @@
     "animals = pd.DataFrame({'Cows':[12,20], 'Goats':[22,19]}, index=['Year 1','Year 2'])\n",
     "animals.to_csv(\"../../Data/output/cows_and_goats.csv\")\n",
     "animals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Indexing, Selecting & Assigning"
    ]
   },
   {
@@ -1291,6 +1305,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary Functions and Maps"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -1476,6 +1497,13 @@
     "        return 1\n",
     "\n",
     "reviews.apply(starts, axis='columns')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grouping and Sorting"
    ]
   },
   {
@@ -1979,6 +2007,332 @@
    "source": [
     "reviews.groupby(['country','variety']).size().sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Type and Missing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.points.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         87\n",
+       "1         87\n",
+       "          ..\n",
+       "129969    90\n",
+       "129970    90\n",
+       "Name: points, Length: 129971, dtype: object"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.points.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>description</th>\n",
+       "      <th>designation</th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>province</th>\n",
+       "      <th>region_1</th>\n",
+       "      <th>region_2</th>\n",
+       "      <th>taster_name</th>\n",
+       "      <th>taster_twitter_handle</th>\n",
+       "      <th>title</th>\n",
+       "      <th>variety</th>\n",
+       "      <th>winery</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Aromas include tropical fruit, broom, brimston...</td>\n",
+       "      <td>Vulkà Bianco</td>\n",
+       "      <td>87</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sicily &amp; Sardinia</td>\n",
+       "      <td>Etna</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kerin O’Keefe</td>\n",
+       "      <td>@kerinokeefe</td>\n",
+       "      <td>Nicosia 2013 Vulkà Bianco  (Etna)</td>\n",
+       "      <td>White Blend</td>\n",
+       "      <td>Nicosia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>This is dominated by oak and oak-driven aromas...</td>\n",
+       "      <td>Rosso</td>\n",
+       "      <td>87</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sicily &amp; Sardinia</td>\n",
+       "      <td>Etna</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kerin O’Keefe</td>\n",
+       "      <td>@kerinokeefe</td>\n",
+       "      <td>Masseria Setteporte 2012 Rosso  (Etna)</td>\n",
+       "      <td>Nerello Mascalese</td>\n",
+       "      <td>Masseria Setteporte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129893</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Aromas of passion fruit, hay and a vegetal not...</td>\n",
+       "      <td>Corte Menini</td>\n",
+       "      <td>91</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Veneto</td>\n",
+       "      <td>Soave Classico</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kerin O’Keefe</td>\n",
+       "      <td>@kerinokeefe</td>\n",
+       "      <td>Le Mandolare 2015 Corte Menini  (Soave Classico)</td>\n",
+       "      <td>Garganega</td>\n",
+       "      <td>Le Mandolare</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129964</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Initially quite muted, this wine slowly develo...</td>\n",
+       "      <td>Domaine Saint-Rémy Herrenweg</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alsace</td>\n",
+       "      <td>Alsace</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Roger Voss</td>\n",
+       "      <td>@vossroger</td>\n",
+       "      <td>Domaine Ehrhart 2013 Domaine Saint-Rémy Herren...</td>\n",
+       "      <td>Gewürztraminer</td>\n",
+       "      <td>Domaine Ehrhart</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8996 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country                                        description  \\\n",
+       "0        Italy  Aromas include tropical fruit, broom, brimston...   \n",
+       "13       Italy  This is dominated by oak and oak-driven aromas...   \n",
+       "...        ...                                                ...   \n",
+       "129893   Italy  Aromas of passion fruit, hay and a vegetal not...   \n",
+       "129964  France  Initially quite muted, this wine slowly develo...   \n",
+       "\n",
+       "                         designation  points  price           province  \\\n",
+       "0                       Vulkà Bianco      87    NaN  Sicily & Sardinia   \n",
+       "13                             Rosso      87    NaN  Sicily & Sardinia   \n",
+       "...                              ...     ...    ...                ...   \n",
+       "129893                  Corte Menini      91    NaN             Veneto   \n",
+       "129964  Domaine Saint-Rémy Herrenweg      90    NaN             Alsace   \n",
+       "\n",
+       "              region_1 region_2    taster_name taster_twitter_handle  \\\n",
+       "0                 Etna      NaN  Kerin O’Keefe          @kerinokeefe   \n",
+       "13                Etna      NaN  Kerin O’Keefe          @kerinokeefe   \n",
+       "...                ...      ...            ...                   ...   \n",
+       "129893  Soave Classico      NaN  Kerin O’Keefe          @kerinokeefe   \n",
+       "129964          Alsace      NaN     Roger Voss            @vossroger   \n",
+       "\n",
+       "                                                    title            variety  \\\n",
+       "0                       Nicosia 2013 Vulkà Bianco  (Etna)        White Blend   \n",
+       "13                 Masseria Setteporte 2012 Rosso  (Etna)  Nerello Mascalese   \n",
+       "...                                                   ...                ...   \n",
+       "129893   Le Mandolare 2015 Corte Menini  (Soave Classico)          Garganega   \n",
+       "129964  Domaine Ehrhart 2013 Domaine Saint-Rémy Herren...     Gewürztraminer   \n",
+       "\n",
+       "                     winery  \n",
+       "0                   Nicosia  \n",
+       "13      Masseria Setteporte  \n",
+       "...                     ...  \n",
+       "129893         Le Mandolare  \n",
+       "129964      Domaine Ehrhart  \n",
+       "\n",
+       "[8996 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews[reviews.price.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8996"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reviews[reviews.price.isnull()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8996"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.price.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8996"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.isnull(reviews.price).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unknown                  21247\n",
+       "Napa Valley               4480\n",
+       "                         ...  \n",
+       "Australia-New Zealand        1\n",
+       "Loazzolo                     1\n",
+       "Name: region_1, Length: 1230, dtype: int64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews.region_1.fillna('Unknown').value_counts().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Renaming and Combining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
