--- a/kaggleLearn/DataVisualization/1_Accessing_Data.ipynb
+++ b/kaggleLearn/DataVisualization/1_Accessing_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accessing Data with Pandas"
+    "# 1. Accessing Data with Pandas"
    ]
   },
   {
@@ -1266,7 +1266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selecting and Filtering Data"
+    "# 2. Selecting and Filtering Data"
    ]
   },
   {
