--- a/scalaBasic/ReadMe
+++ b/scalaBasic/ReadMe
@@ -35,3 +35,32 @@
     * 함수를 인수로 취급하는 함수.
     * 함수를 입력 파라미터나 출력 값으로 처리.
     * Collection.sort(new ArrayList<Integer>(), (x,y) -> x>=y? -1:1);
+    
+ ### 객체
+* 기본 자료형, 함수, 클래스 모두 객체로 취급.
+* 비교 연산은 ==, != 으로 모두 가능!
+ 
+ ### 자료형
+ * 자바와 동일하며 자바의 Primitive Type은 존재 하지 않으며 모든 것이 클래스.
+ * 컴파일 시점에 자바 자료형으로 변함.
+ * 숫자형, 논리형, 문자형이 있으며, 선언하지 않고 사용할 수 있으며, 정수형은 Int, 실수는 Double로 선언 됨.
+ * 기본 자료형
+    * Byte, Short, Int, Long, Float, Double, Char, Boolean
+ * 참조 자료형
+    * String, Unit, NULL, Nothing, Any, AnyVal, AnyRef
+ * 숫자형
+    * 정수형 : Byte, Short, Int, Long
+    * 실수형 : Float, Double
+ * 캐스팅
+    * 업캐스팅(사이즈가 더 큰걸로)은 자동으로 됨. 
+    * 다운캐스팅은 명시해야함.
+ * 접두어 처리
+    * 접두어를 붙여 컴파일시점에 문자열 변환 처리 가능
+    * s
+        * ${변수명{을 이용하여 문자열 내 변수를 값으로 치환. 연산도 가능.
+    * f
+        * 문자열 포맷팅. printf()와 같은 방식
+    * raw
+        * 특수문자를 처리하지 않고 원본 문자로 인식.
+   
+ 
