--- a/scalaBasic/ReadMe
+++ b/scalaBasic/ReadMe
@@ -62,5 +62,9 @@
         * 문자열 포맷팅. printf()와 같은 방식
     * raw
         * 특수문자를 처리하지 않고 원본 문자로 인식.
+
+### 변수
+* var : 가변 변수 ( 재할당 가능 ! )
+* val : 불변 변수 ( 재할당 불가능 ! ), 동시 처리!!
    
- 
+### 함수
