--- a/scalaBasic/ReadMe
+++ b/scalaBasic/ReadMe
@@ -91,3 +91,24 @@
     * var random2 = Math.random()
     * def random3 = Math.random()
 * 함수 내 다른 함수를 선언할 수 있음!
+
+#### 람다 함수
+* \_를 이용하여 묵시적인 파라미터 지정가능.
+* def exec(f: (Int,Int) => Int, x:Int, y:Int) = f(x,y)
+* exec((x:Int, y:Int) => x+y, 2, 3)
+* exec((x,y)=>x+y, 2,3)
+* exec(_ + _ , 3, 1)
+
+#### 커링
+* 여러 개 인수 목록을 여러 개의 괄호로 정의
+* 정해진 파라미터 수보다 적은 인수로 호출시 리턴 값은 나머지 파라미터를 받는 함수.
+* def modN(n:Int, x:Int) = ((x%n)==0)
+* def modN(n:Int)(x:Int) = ((x%n)==0)
+    * n값을 미리 바인딩 하는 다른 함수로 선언 가능. 
+    * 다른 함수의 파라미터로 전달 가능.
+    
+#### 클로저
+* 내부에 참조되는 인수에 대한 바인딩.
+
+#### 타입
+* 타입(T)를 이용해 클래스와 함수를 제너릭하게 생성 가능.
