--- a/scalaBasic/ReadMe
+++ b/scalaBasic/ReadMe
@@ -112,3 +112,23 @@
 
 #### 타입
 * 타입(T)를 이용해 클래스와 함수를 제너릭하게 생성 가능.
+
+#### 클래스
+* 멤버 변수 선언 및 생략 가능
+    * class Person(name:String, age:Int) //선언
+    * val p = new Person("Jay", 29) // 생성
+    * class A // 멤버변수 생략 가능
+* 클래스 멤버 변수
+    * 가변 변수
+        * 컴파일러가 클래스 내부에 자동으로 getter, setter 메소드 생성
+        * 가변 변수를 읽고, 쓰기 가능
+    * 불변 변수
+        * 컴파일러가 getter만 생성.
+        * 불변 변수는 읽기만 가능
+    * 그 외 변수
+        * getter, setter가 생성되지 않아 클래스 내에서만 사용가능.
+    * default
+        * 기본, 변수, 상수 모두 기본값 설정 가능.
+* 클래스의 메소드
+    * 함수와 마찬가지로 def로 선언
+    * 
