--- a/kaggleKernel/LinearAlgebra.ipynb
+++ b/kaggleKernel/LinearAlgebra.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Algebra for Data Scientists\n",
+    "# [Linear Algebra for Data Scientists](https://www.kaggle.com/mjbahmani/linear-algebra-for-data-scientists)\n",
     "\n",
-    "데이터 사이언티스트에게 필요한 선대수의 기본 개념을 알아보자!"
+    "데이터 사이언티스트에게 필요한 선대수의 기본 개념을 알아보자!\n",
+    "![](https://camo.githubusercontent.com/e42ea0e40062cc1e339a6b90054bfbe62be64402/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3339313937313830393536333530383733382f3434323635393336333534333331383532382f7363616c61722d766563746f722d6d61747269782d74656e736f722e706e67)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +29,273 @@
     "import glob\n",
     "import sys\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup\n",
+    "%matplotlib inline\n",
+    "%precision 4\n",
+    "plt.style.use('ggplot')\n",
+    "np.set_printoptions(suppress=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 선형대수(Linear Algebra)란?\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/f4f0f2986d54c01f3bccf464d266dfac923c80f3)위와 같은 선형 방정식 관련 수학분야 중 하나이며 수학의 모든 영역에서 중심.\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Linear_subspaces_with_shading.svg/800px-Linear_subspaces_with_shading.svg.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3d vector in numpy\n",
+    "a = np.zeros((2,3,4))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> [1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vector\n",
+    "x = [1,2,3]\n",
+    "y = [4,5,6]\n",
+    "print(type(x),x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> [1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vector append\n",
+    "print(type(x+y),x+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> [5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vector add\n",
+    "print(type(np.add(x,y)),np.add(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> [-3  6 -3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vector Cross Product\n",
+    "print(type(np.cross(x,y)),np.cross(x,y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 벡터화(Vectorization)란 ?\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/30ca6a8b796fd3a260ba3001d9875e990baad5ab)\n",
+    "* 행렬을 열 벡터로 변환하는 선형 변환. \n",
+    "* m X n 행렬 A를 벡터화 하면 m*n X 1 벡터가 됨.\n",
+    "* 길이가 n인 벡터는 n차원 공간에서 점처럼 취급 될 수 있음.\n",
+    "    * 유클리드 거리(Euclidean Distance) : 점 사이 거리 계산\n",
+    "    * 코사인 유사도(Cosine Similarity) : 벡터의 유사성 계산"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 표기법\n",
+    "![](http://s8.picofile.com/file/8349058626/la.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 행렬 연산\n",
+    "![](https://cdn.britannica.com/06/77706-004-31EE92F3.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initializing matrices \n",
+    "x = np.array([[1, 2], [4, 5]]) \n",
+    "y = np.array([[7, 8], [9, 10]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8 10]\n",
+      " [13 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add Metrices\n",
+    "print(np.add(x,y)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-6 -6]\n",
+      " [-5 -5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sub Metrices\n",
+    "print(np.subtract(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.1429 0.25  ]\n",
+      " [0.4444 0.5   ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Divide Metrices\n",
+    "print(np.divide(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7 16]\n",
+      " [36 50]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multyply Metrices\n",
+    "print(np.multiply(x,y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 벡터간 Dot Product\n",
+    "![](http://gamedevelopertips.com/wp-content/uploads/2017/11/image8.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3  6 -3] 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3]\n",
+    "y = [4,5,6]\n",
+    "print(np.cross(x,y),np.dot(x,y))"
    ]
   },
   {
@@ -54,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
